# mcp-server-hosting-demo

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  deployment.py
